--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+#root{
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
+.mt-1{
+  border: 1px solid rgb(216, 215, 215);
+  border-radius: 0.4rem;
+}
+
+.wallet{
+  margin-right: 10px;
+}
+
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -70,3 +86,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+
